plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'pmd'
}

group = 'com.moltrank'
version = '0.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.jsoup:jsoup:1.18.3'
    implementation 'com.mmorrell:solanaj:1.28.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
    testImplementation 'org.mockito:mockito-core:5.21.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'net.bytebuddy:byte-buddy:1.18.5'
    testImplementation 'net.bytebuddy:byte-buddy-agent:1.18.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xlint:unchecked', '-Xlint:deprecation', '-Werror'])
}

pmd {
    toolVersion = '7.21.0'
    consoleOutput = true
    ignoreFailures = false
    ruleSets = []
    ruleSetFiles = files("$rootDir/config/pmd/ruleset.xml")
}

tasks.named('check') {
    dependsOn tasks.named('pmdMain')
    dependsOn tasks.named('pmdTest')
}
